@@ -24,7 +24,6 @@ Dist::Zilla::Plugin::MinimumVersionTests    = 0
 Dist::Zilla::Plugin::NoTabsTests            = 0
 Dist::Zilla::Plugin::PodCoverageTests       = 0
 Pod::Coverage::TrustPod                     = 0
-Dist::Zilla::Plugin::PodLinkTests           = 0
 Dist::Zilla::Plugin::PodSyntaxTests         = 0
 Dist::Zilla::Plugin::PortabilityTests       = 0
 Dist::Zilla::Plugin::ProgCriticTests        = 0
