@@ -87,12 +87,16 @@ L<Dist::Zilla::Plugin::PodCoverageTests>, which checks that you have Pod
 documentation for the things you should have it for. See L<Test::Pod::Coverage>
 for what that means.
 
+=begin hide
+
 =item *
 
 L<Dist::Zilla::Plugin::PodLinkTests>, which tests links in your Pod for invalid
 links, or links which return a 404 (Not Found) error when you release your
 dist. Note that smokers won't check for 404s to save hammering the network.
 See L<Test::Pod::LinkCheck> and L<Test::Pod::No404s> for details.
+
+=end hide
 
 =item *
 
@@ -161,7 +165,7 @@ sub configure {
         MinimumVersionTests     => 1,
         NoTabsTests             => 1,
         PodCoverageTests        => 1,
-        PodLinkTests            => 1,
+        # PodLinkTests            => 1, # Too broken to include
         PodSyntaxTests          => 1,
         PortabilityTests        => 1,
         ProgCriticTests         => 0, # Quite personal
@@ -190,11 +194,10 @@ sub configure {
 }
 
 __PACKAGE__->meta->make_immutable();
+
 no Moose;
 
 1;
-
-__END__
 
 =begin Pod::Coverage
 
